    already been deleted underneath us. (LP: #122347)
  * apport/ui.py, run_report_bug(): Do not crash if the target process runs as
    a different user. Print a proper error message instead. Add test case
    test_run_report_bug_noperm_pid(). (LP: #121121)
  * apport/fileutils.py, likely_packaged(): Ignore /var/lib/schroot. Add test
    case. (LP: #122859)

  Merge the fedora branch, thanks a lot to Will Woods wwoods@redhat.com>:

  * Add apport.init.fedora: Fedora specific init script.
  * Add apport.spec: RPM build recipe.
  * Add backends/packaging_rpm.py: Partial implementation of the packaging
    backend for RPM which applies to all RPM-based distros.
  * Add backends/packaging_fedora.py: Concrete packaging backend
    implementation for Fedora.
  * apport/elfcore.py: Classes for parsing general ELF files, and information
    from core dumps.
  * bin/apport: Fall back to reading signal number and PID directly from the
    core file (via elfcore.py) if CORE_SIGNAL and CORE_PID are not defined (i.
    e. when running on a non-Ubuntu kernel).
  * crashdb.conf: Add stanzas for Fedora and a 'debug' database which uses the
    'memory' crashdb implementation.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 14 Jul 2007 13:26:43 +0100

apport (0.90) gutsy; urgency=low

  * apport/ui.py, load_report(): Catch IOError, too. LP: #118827
  * Merge apport-cli package into apport itself. The program itself is just 3
    kB compressed, and it's not worth wasting another 34 kB compressed
    changelog for this tiny bit.
  * apport/report.py, obsolete_packages(): Use the version comparison from the
    packaging system instead of just testing for inequality. This catches zero
    epochs. Thanks to Will Woods <wwoods@redhat.com>!
  * apport/ui.py: Add option -c/--crash-file to run the UI with a particular
    crash file (which can be anywhere) instead of all pending crashes in
    /var/crash/.
  * Add xdg-mime/apport.xml: XDG MIME type definition for .crash files.